fix: padding on mobile

--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -24,6 +24,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 3rem;
+    box-sizing: border-box;
 }
 
 .hero .container {
